# LCCPSeg

./: CMakeLists.txt  README.md
src/: lccp_segmentation.cpp  lccp_segmentation.h  lccp_segmentation.hpp  main.cpp  mainwindow.cpp  mainwindow.h
